--- a/app/src/main/res/layout/value_add_user.xml
+++ b/app/src/main/res/layout/value_add_user.xml
@@ -10,7 +10,7 @@
 
         android:layout_weight="1"
         android:textAlignment="center"
-        android:textSize="30sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/entryValueType"
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textAlignment="center"
-        android:textSize="30sp" />
+        android:textSize="14sp" />
 
     <EditText
         android:id="@+id/entryValue"
@@ -27,6 +27,7 @@
         android:layout_weight="1"
         android:ems="10"
         android:hint="@string/value"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textSize="14sp" />
 
 </LinearLayout>
