--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.danielakua.dbapp.MainActivity">
+    tools:context="com.example.danielakua.dbapp.LoginPage">
 
     <TextView
         android:id="@+id/titleLogin"
@@ -56,17 +56,17 @@
 
     <Button
         android:id="@+id/loginLogin"
-        android:layout_width="88dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:onClick="LoginClick"
         android:text="@string/button_login"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/logsLogin"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
 
@@ -87,35 +87,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleLogin" />
-
-    <Button
-        android:id="@+id/logsLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="LogsClick"
-        android:text="@string/logs_page"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/recordsLogin"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/loginLogin"
-        app:layout_constraintTop_toTopOf="@+id/loginLogin" />
-
-    <Button
-        android:id="@+id/recordsLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:onClick="RecordsClick"
-        android:text="@string/records_page"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/logsLogin"
-        app:layout_constraintTop_toTopOf="@+id/loginLogin" />
 
     <Button
         android:id="@+id/registerLogin"
