--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -16,13 +16,27 @@
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/errorMain"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/logoutLogin"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="spread" />
+
+    <Button
+        android:id="@+id/logoutLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:onClick="LogoutClick"
+        android:text="@string/logout_page"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_blue_light"
+        app:layout_constraintBottom_toBottomOf="@+id/titleMain"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/titleMain"
+        app:layout_constraintTop_toTopOf="@+id/titleMain" />
 
     <TextView
         android:id="@+id/errorMain"
@@ -44,8 +58,9 @@
         android:onClick="GameClick"
         android:text="@string/button_game"
         android:textAllCaps="false"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/logsMain"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linMain"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,61 +68,57 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/errorMain" />
 
-    <Button
-        android:id="@+id/logsMain"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linMain"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:onClick="LogsClick"
-        android:text="@string/logs_page"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/changePWMain"
-        app:layout_constraintEnd_toStartOf="@+id/recordsMain"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gameMain" />
-
-    <Button
-        android:id="@+id/recordsMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:onClick="RecordsClick"
-        android:text="@string/records_page"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/logsMain"
-        app:layout_constraintTop_toTopOf="@+id/logsMain" />
-
-    <Button
-        android:id="@+id/adminMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:onClick="AdminClick"
-        android:text="@string/admin_title"
-        android:textAllCaps="false"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changePWMain" />
+        app:layout_constraintTop_toBottomOf="@+id/gameMain">
 
-    <Button
-        android:id="@+id/changePWMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:onClick="UpdateInfoClick"
-        android:text="@string/change_pass"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/adminMain"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logsMain" />
+        <Button
+            android:id="@+id/recordsMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:onClick="RecordsClick"
+            android:text="@string/records_page"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toTopOf="@+id/changePWMain"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gameMain" />
+
+        <Button
+            android:id="@+id/changePWMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:onClick="UpdateInfoClick"
+            android:text="@string/change_pass"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toTopOf="@+id/adminMain"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recordsMain" />
+
+        <Button
+            android:id="@+id/adminMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:onClick="AdminClick"
+            android:text="@string/admin_title"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/changePWMain" />
+
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
