--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -11,15 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/addGameGamelist"
+        app:layout_constraintBottom_toTopOf="@+id/errorGamelist"
         app:layout_constraintEnd_toStartOf="@+id/addGameGamelist"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/addGameGamelist" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addGameGamelist"
@@ -29,6 +29,8 @@
         android:onClick="addGameClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintBottom_toBottomOf="@+id/titleGamelist"
+        app:layout_constraintTop_toTopOf="@+id/titleGamelist"
         app:layout_constraintStart_toEndOf="@+id/titleGamelist" />
 
     <TextView
