--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:onClick="CalculateScoreClick"
+        android:onClick="RankingClick"
         android:text="@string/button_calculate_score"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
