--- a/app/src/main/res/layout/game_row_view.xml
+++ b/app/src/main/res/layout/game_row_view.xml
@@ -6,14 +6,18 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical|center_horizontal">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="bottom|center_horizontal"
+        android:textAlignment="gravity">
 
         <TextView
             android:id="@+id/dateTime"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:gravity="bottom|center_horizontal"
+            android:textAlignment="gravity" />
 
     </TableRow>
 
